--- a/sensor.yaml
+++ b/sensor.yaml
@@ -113,6 +113,7 @@
     - cloud_cover
     - temperature_max
     - temperature_min
+    - uv_index
   update_interval: '00:05'
 
 - platform: history_stats
