--- a/groups.yaml
+++ b/groups.yaml
@@ -44,6 +44,7 @@ modes:
     - input_boolean.night_mode
     - input_boolean.away_mode
     - input_boolean.holiday_mode
+    - input_boolean.cover_mode
  
 actions:
   view: no
