--- a/input_boolean.yaml
+++ b/input_boolean.yaml
@@ -7,7 +7,10 @@ away_mode:
 holiday_mode:
   name: Congés
   icon: mdi:sunglasses
-
+cover_mode:
+  name: Volets auto
+  icon: mdi:brightness-auto
+  initial: on
 garage_charging:
   name: En charge
   icon: mdi:battery-charging-30
