--- a/sensor.yaml
+++ b/sensor.yaml
@@ -113,8 +113,8 @@
     - precip_probability
     - wind_speed
     - cloud_cover
-    - temperature_max
-    - temperature_min
+    - temperature_high
+    - temperature_low
     - uv_index
   update_interval: '00:05'
 
