--- a/automations.yaml
+++ b/automations.yaml
@@ -234,13 +234,10 @@
       entity_id: input_boolean.cover_mode
       state: 'on'
   action:
-      - service: script.ouverture_volets
-        condition:
-          - condition: template
-            value_template: '{{ states.sensor.dark_sky_daytime_high_temperature.state | float < states.input_number.open_cover_temperature_treshold.state | float }}'
       - service: script.positionner_volets
         data_template:
           position: 18 
-        condition: 
-          - condition: template
-            value_template: '{{ states.sensor.dark_sky_daytime_high_temperature.state | float >= states.input_number.open_cover_temperature_treshold.state | float }}'
+      - condition:
+        condition: template
+          value_template: '{{ states.sensor.dark_sky_daytime_high_temperature.state | float < states.input_number.open_cover_temperature_treshold.state | float }}'
+      - service: script.ouverture_volets
