--- a/input_number.yaml
+++ b/input_number.yaml
@@ -31,6 +31,7 @@ open_cover_temperature_treshold:
   name: Seuil température ouverture volets
   icon: mdi:temperature-celsius
   initial: 22
+  mode: box
   min: 18
   max: 30
   unit_of_measurement: '°C'
