chore(track): configuration for bt tracking

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -45,6 +45,10 @@ discovery:
 
 device_tracker:
   - platform: bluetooth_tracker
+    interval_seconds: 30
+    new_device_defaults:
+      track_new_devices: false
+      hide_if_away: true
 
 # Allows you to issue voice commands from the frontend in enabled browsers
 conversation:
