--- a/configuration.yaml
+++ b/configuration.yaml
@@ -159,6 +159,10 @@ notify:
 # Cloud
 cloud:
 
+weather:
+  - platform: darsky
+    api_key: !secret darksky_api_key
+
 camera:
   - platform: generic
     name: Salon
