--- a/automations.yaml
+++ b/automations.yaml
@@ -230,6 +230,12 @@
       data:
         title: "{{ states.input_text.notifications_title_presence.state }}"
         message: "{{ states.input_text.notifications_message_presence.state }}"
+        action:
+          - action: turn_off
+            title: Turn Off
+          - action: mute
+            title: Mute
+
 
 - id: opening_cover_at_morning_away
   alias: Ouverture matinale des volets (Absence)
