chore(light): modify name

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -132,7 +132,7 @@ light:
   - platform: yeelight
     devices:
       192.168.0.9:
-        name: Chambre Axelle
+        name: Bureau
       192.168.0.2:
         name: Salon
       192.168.0.26:
