--- a/sensor.yaml
+++ b/sensor.yaml
@@ -64,7 +64,7 @@
       friendly_name: Temps de chargement
       icon_template: mdi:timer-sand
       unit_of_measurement: h
-      value_template: "{{states.sensor.charge_estimated_time_minute.state|int / 60}}"
+      value_template: "{{(states.sensor.charge_estimated_time_minute.state|int / 60)|round(2)}}"
 
     ## SUN ##
     sunset:
