--- a/input_number.yaml
+++ b/input_number.yaml
@@ -49,7 +49,7 @@ covers_position:
 battery_left:
   name: Batterie restante
   icon: mdi:car-electric
-  mode: box
+  mode: slider
   unit_of_measurement: '%'
   initial: 50
   step: 5
