--- a/sensor.yaml
+++ b/sensor.yaml
@@ -41,7 +41,7 @@
       friendly_name: Coût de recharge
       unit_of_measurement: €
       icon_template: mdi:currency-eur
-      value_template: "{{(states.sensor.day_car_charge.state|float * states.input_number.elec_price.state|float * 2.3) | round(2)}}"
+      value_template: "{{(states.sensor.day_car_charge.state|float * states.input_number.elec_price.state|float * 2.2) | round(2)}}"
     price_month_car_charge:
       entity_id: 
         - sensor.month_car_charge
@@ -49,7 +49,7 @@
       friendly_name: Coût de recharge mensuel
       icon_template: mdi:currency-eur
       unit_of_measurement: €
-      value_template: "{{(states.sensor.month_car_charge.state|float * states.input_number.elec_price.state|float * 2.3) | round(2)}}"
+      value_template: "{{(states.sensor.month_car_charge.state|float * states.input_number.elec_price.state|float * 2.2) | round(2)}}"
     charge_estimated_time_minute:
       entity_id: 
         - input_number.battery_left
@@ -61,7 +61,7 @@
     charge_estimated_time_hour:
       entity_id: 
         - sensor.charge_estimated_time_minute
-      friendly_name: Temps de chargement
+      friendly_name: Temps de chargement estimé
       icon_template: mdi:timer-sand
       unit_of_measurement: h
       value_template: "{{(states.sensor.charge_estimated_time_minute.state|int / 60)|round(2)}}"
@@ -155,7 +155,7 @@
     - temperature_high
     - temperature_low
     - uv_index
-  update_interval: '00:05'
+  update_interval: '00:10'
 
 - platform: history_stats
   name: month_count_car_charge
