--- a/automations.yaml
+++ b/automations.yaml
@@ -298,3 +298,17 @@
       data:
         title: "Route vers SII"
         message: "{{ states.sensor.sii_roads.state }}"
+
+- id: night_mode_on_controller
+  alias: Mode nuit Télécommande
+  trigger:
+    platform: event
+    event_type: zwave.scene_activated
+    event_data: 
+      entity_id: zwave.hank_hkzwscn04_scene_controller
+      scene_id: 1
+      scene_data: 0
+  action:
+    - service: input_boolean.turn_on
+      data:
+        entity_id: input_boolean.night_mode
