--- a/configuration.yaml
+++ b/configuration.yaml
@@ -175,8 +175,11 @@ camera:
         https://raw.githubusercontent.com/MarcBouteiller/home-assistant-configuration/master/assets/camera-off.png
       {% endif %}
     limit_refetch_to_url_change: false
-  - platform: ffmpeg
-    input: rtsp://192.168.0.7:554/unicast
+  - platform: xiaomi
+    name: Sejour
+    host: '192.168.0.7'
+    model: 'xiaofang'
+    password: YOUR_PASSWORD
 
 zwave:
   usb_path: /dev/ttyACM0
