--- a/automations.yaml
+++ b/automations.yaml
@@ -23,18 +23,18 @@
     entity_id: input_boolean.night_mode
     state: 'on'
   - condition: state
-    entity_id: light.bandeau_led
+    entity_id: group.leds_livingroom
     state: 'off'
   action:
     - service: light.turn_on
       data:
-        entity_id: light.bandeau_led
+        entity_id: group.leds_livingroom
         brightness: 5
         color_name: orange
     - delay: 00:02:30
     - service: light.turn_off
       data:
-        entity_id: light.bandeau_led
+        entity_id: group.leds_livingroom
 
 - id: night_mode_on
   alias: Mode nuit
